--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ title: Teampass.net
 
 {% include sections/offer.html offer-text="Complete <strong>D</strong><span class=\"thin\">ocumentation</span> is available." button-text="ReadTheDocs" button-target="_blank" button-url="https://teampass.readthedocs.io/en/latest/" %}
 
+{% include sections/testimonials.html %}
+
 {% include sections/prices.html %}
 
 {% include sections/offer.html offer-text="<strong>T</strong><span class=\"thin\">eampass</span> is developed using PHPStorm." button-text="Visit" button-target="_blank" button-url="https://www.jetbrains.com/phpstorm/" %}
