--- a/donation.html
+++ b/donation.html
@@ -55,6 +55,12 @@ title: Wall of <strong>Sponsors</strong>
       </thead>
       <tbody>
         <tr>
+          <td>Arie Van Rossum</td>
+          <td>$25.00</td>
+          <td>2017-09-28</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
           <td>Le Goût du Libre</td>
           <td>$100.00</td>
           <td>2017-05-18</td>
