--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Teampass.net
 {% include sections/prices.html %}
 
 {% include sections/offer.html offer-text="<strong>T</strong><span class=\"thin\">eampass</span> is developed using PHPStorm." button-text="Visit" button-target="_blank" button-url="https://www.jetbrains.com/phpstorm/" %}
-
+<a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="https://teampass.net/images/phpstorm_100.png" alt="PHPStorm" /></a>
 {% include sections/team.html %}
 
 {% include sections/contact.html %}
