--- a/donation.html
+++ b/donation.html
@@ -53,7 +53,13 @@ title: Wall of <strong>Sponsors</strong>
           <th></th>	
         </tr>
       </thead>
-      <tbody>
+      <tbody>        
+        <tr>
+          <td>Christopher Babcock</td>
+          <td>$125.00</td>
+          <td>2017-10-25</td>
+          <td>&nbsp;</td>
+        </tr>
         <tr>
           <td>Arie Van Rossum</td>
           <td>$25.00</td>
