--- a/donation.html
+++ b/donation.html
@@ -53,7 +53,13 @@ title: Wall of <strong>Sponsors</strong>
           <th></th>	
         </tr>
       </thead>
-      <tbody>        
+      <tbody>       
+        <tr>
+          <td>Martijn Kok</td>
+          <td>$30.00</td>
+          <td>2018-01-18</td>
+          <td>&nbsp;</td>
+        </tr>        
         <tr>
           <td>Christopher Babcock</td>
           <td>$125.00</td>
