--- a/donation.html
+++ b/donation.html
@@ -2,6 +2,7 @@
 layout: single_page
 tagline: Thank You
 title: Wall of <strong>Sponsors</strong>
+published: true
 ---
 <section class="site-section about-section next-section-indicator" id="about">
   <div class="container">
@@ -54,6 +55,12 @@ title: Wall of <strong>Sponsors</strong>
         </tr>
       </thead>
       <tbody>       
+        <tr>
+          <td>Brent Wagner</td>
+          <td>$25.00</td>
+          <td>2018-02-23</td>
+          <td>&nbsp;</td>
+        </tr>        
         <tr>
           <td>Martijn Kok</td>
           <td>$30.00</td>
