--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Teampass.net
+published: true
 ---
 
 
@@ -24,7 +25,8 @@ title: Teampass.net
 
 {% include sections/prices.html %}
 
-{% include sections/offer.html offer-text="<strong>T</strong><span class=\"thin\">eampass</span> is developed using PHPStorm." button-text="Visit" button-target="_blank" button-url="https://www.jetbrains.com/phpstorm/" %}
+<!--{% include sections/offer.html offer-text="<strong>T</strong><span class=\"thin\">eampass</span> is developed using PHPStorm." button-text="Visit" button-target="_blank" button-url="https://www.jetbrains.com/phpstorm/" %}-->
+{% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span><strong>E</strong><span class=\"thin\">xtension</span> is now beta." button-text="Visit" button-target="_blank" button-url="teampassconnect.html" %}
 
 {% include sections/team.html %}
 
