--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ published: true
 
 {% include sections/prices.html %}
 
-{% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span><strong>E</strong> <span class=\"thin\">xtension</span> is now beta." button-text="Visit" button-target="_blank" button-url="teampassconnect.html" %}
+{% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span><strong>E</strong> <span class=\"thin\">xtension</span> is now beta." button-text="Read more" button-target="_blank" button-url="teampassconnect.html" %}
 
 {% include sections/team.html %}
 
