--- a/teampassconnect.html
+++ b/teampassconnect.html
@@ -17,7 +17,7 @@
     
     <div class="row text-center">
       <header class="col-md-8 col-md-push-2 col-sm-12 section-header">
-        <h3>Team and Resource organization</h3>
+        <h3>Now in Beta for Firefox</h3>
         <hr class="normal">
       </header>
     </div>
@@ -25,16 +25,10 @@
     <div class="row text-left">
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
-        <ul class="icon-list">
-          <li>Unique User access</li>
-          <li>Pre-defined Roles (Admin, Super-Manager, Manager, User, Read-Only) [<a href="{{site.readthedocs-url}}manage/manage-users/" target="_blank">Read mode</a>]</li>
-          <li>Define your own User-Goups (for example:  IT, Project Managers, ...) [<a href="{{site.readthedocs-url}}manage/manage-groups/" target="_blank">Read mode</a>]</li>
-          <li>Define access rights on Folders using User-Goups</li>
-          <li>Define own access rights by User (allow/forbid other Folders)</li>
-        </ul>
+        TeampassConnect extension is now available for Firefox.
         </p>
       </div>
     </div>
     <p>&nbsp;</p>
     
-    <div cl
+  
