--- a/teampassconnect.html
+++ b/teampassconnect.html
@@ -25,7 +25,8 @@
     <div class="row text-left">
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
-        TeampassConnect extension is now available for Firefox.
+        TeampassConnect extension is now available for Firefox. Install it and request your first month trial to discover its useful features.
+        Using TeampassConnect allows you to interact in a bidirectionnal way between Teampass database and the web borwser. 
         </p>
       </div>
     </div>
