--- a/teampassconnect.html
+++ b/teampassconnect.html
@@ -1,3 +1,9 @@
+---
+layout: single_page
+tagline: Technical Information
+title: Teampass <strong>Connect</strong>?
+---
+
 <section class="site-section about-section next-section-indicator" id="about">
   <div class="container">
     
