--- a/teampassconnect.html
+++ b/teampassconnect.html
@@ -1,7 +1,7 @@
 ---
 layout: single_page
-tagline: Technical Information
-title: Teampass <strong>Connect</strong>?
+tagline: Connecting to web Browsers
+title: with Teampass <strong>Connect</strong>?
 published: true
 ---
 
@@ -10,7 +10,7 @@ published: true
     
     <div class="row text-center">
       <header class="col-md-8 col-md-push-2 col-sm-12 section-header">
-        <h2>TeampassConnect</h2>
+        <h2>About Teampass Connect</h2>
         <hr class="normal">
       </header>
 
