--- a/teampassconnect.html
+++ b/teampassconnect.html
@@ -49,7 +49,15 @@ published: true
     <div class="row text-left">
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
-          <a href="https://github.com/nilsteampassnet/nilsteampassnet.github.io/blob/master/tpc/teampassconnect-0.1.6-an%2Bfx.xpi" target="_blank">Download</a> the Firefox XPI file and start using TeampassConnect. 
+          <ul class="icon-list">
+            <li><a href="https://github.com/nilsteampassnet/nilsteampassnet.github.io/raw/master/tpc/teampassconnect-0.1.6-an%2Bfx.xpi" target="_blank">Download</a> the Firefox XPI file. </li>
+            <li>Perform a drag and drop of the XPI file into Firefox.</li>
+            <li>Firefox will ask for a confirmation; click Yes</li>
+            <li>TeampassConnect is now installed.</li>
+          </ul>
+        </p>
+        <p>
+           
         </p>
       </div>
     </div>
@@ -65,7 +73,7 @@ published: true
     <div class="row text-left">
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
-          Documentation is available by following this <a href="http://teampass.readthedocs.io/en/latest/tpc/" target="_blank">link</a>.
+          Documentation is available by following in <a href="http://teampass.readthedocs.io/en/latest/tpc/" target="_blank">ReadTheDocs</a>.
         </p>
       </div>
     </div>
