--- a/teampassconnect.html
+++ b/teampassconnect.html
@@ -73,7 +73,7 @@ published: true
     <div class="row text-left">
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
-          Documentation is available by following in <a href="http://teampass.readthedocs.io/en/latest/tpc/" target="_blank">ReadTheDocs</a>.
+          Documentation is available in <a href="http://teampass.readthedocs.io/en/latest/tpc/" target="_blank">ReadTheDocs</a>.
         </p>
       </div>
     </div>
