--- a/donation.html
+++ b/donation.html
@@ -56,8 +56,8 @@ published: true
       </thead>
       <tbody>
         <tr>
-          <td>Balachander Gadikota</td>
-          <td>$10.00</td>
+          <td>Generous Anonymous :)</td>
+          <td>$100.00</td>
           <td>2018-06-05</td>
           <td>&nbsp;</td>
         </tr> 
