--- a/donation.html
+++ b/donation.html
@@ -56,7 +56,19 @@ published: true
       </thead>
       <tbody>
         <tr>
-          <td>Sath Inc.</td>
+          <td>prozit.eu.</td>
+          <td>$200.00</td>
+          <td>2018-11-084</td>
+          <td>&nbsp;</td>
+        </tr> 
+        <tr>
+          <td>cloudclarity.me</td>
+          <td>$100.00</td>
+          <td>2018-11-084</td>
+          <td>&nbsp;</td>
+        </tr> 
+        <tr>
+          <td>Generth Inc.</td>
           <td>$25.00</td>
           <td>2018-10-04</td>
           <td>&nbsp;</td>
