--- a/donation.html
+++ b/donation.html
@@ -56,15 +56,21 @@ published: true
       </thead>
       <tbody>
         <tr>
-          <td>prozit.eu.</td>
+          <td>Eduard Tortajada Cantero.</td>
+          <td>$25.00</td>
+          <td>2018-12-04</td>
+          <td>&nbsp;</td>
+        </tr> 
+        <tr>
+          <tdrozit.eu.</td>
           <td>$200.00</td>
-          <td>2018-11-084</td>
+          <td>2018-11-08</td>
           <td>&nbsp;</td>
         </tr> 
         <tr>
           <td>cloudclarity.me</td>
           <td>$100.00</td>
-          <td>2018-11-084</td>
+          <td>2018-11-04</td>
           <td>&nbsp;</td>
         </tr> 
         <tr>
