--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ published: true
 
 {% include sections/portfolio.html %}
 
+{% include includes/advertisements.html %}
+
 {% include sections/parallax-features.html %}
 
 {% include sections/offer.html offer-text="Complete <strong>L</strong><span class=\"thin\">ist</span> of Features" button-text="Read more" button-target="" button-url="features.html" %}
