--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ published: true
 
 {% include sections/portfolio.html %}
 
-{% include includes/advertisements.html %}
+{% include section/ads.html %}
 
 {% include sections/parallax-features.html %}
 
