--- a/requirements.html
+++ b/requirements.html
@@ -64,6 +64,20 @@ title: What <strong>Requirements?</strong>
         </p>
       </div>
     </div>
+
+    <div class="row text-center">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Teampass adaptative -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-6796519999488555"
+           data-ad-slot="5258507839"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
   </div>
 
 </section>
