--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@ published: true
 
 {% include sections/prices.html %}
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Teampass adaptative -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6796519999488555"
+     data-ad-slot="5258507839"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 {% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span> <strong>E</strong><span class=\"thin\">xtension</span> is now beta." button-text="Read more" button-target="" button-url="teampassconnect.html" %}
 
 {% include sections/team.html %}
