--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ published: true
 
 {% include sections/prices.html %}
 
+<div class=\"text-center\" style=\"margin-bottom:20px;\">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Teampass adaptative -->
 <ins class="adsbygoogle"
@@ -36,6 +37,7 @@ published: true
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 {% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span> <strong>E</strong><span class=\"thin\">xtension</span> is now beta." button-text="Read more" button-target="" button-url="teampassconnect.html" %}
 
