--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ published: true
 
 {% include sections/prices.html %}
 
-<div class=\"text-center\" style=\"margin-bottom:20px;\">
+<div style="margin-bottom:20px; text-align: center;">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Teampass adaptative -->
 <ins class="adsbygoogle"
