--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@ published: true
 
 {% include sections/portfolio.html %}
 
+<div style="margin-bottom:20px; text-align: center;">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Teampass adaptative -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6796519999488555"
+     data-ad-slot="5258507839"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+
 {% include sections/parallax-features.html %}
 
 {% include sections/offer.html offer-text="Complete <strong>L</strong><span class=\"thin\">ist</span> of Features" button-text="Read more" button-target="" button-url="features.html" %}
 
 {% include sections/commercial.html %}
-
-{% include sections/offer.html offer-text="Complete <strong>D</strong><span class=\"thin\">ocumentation</span> is available." button-text="ReadTheDocs" button-target="_blank" button-url="https://teampass.readthedocs.io/en/latest/" %}
-
-{% include sections/testimonials.html %}
-
-{% include sections/prices.html %}
 
 <div style="margin-bottom:20px; text-align: center;">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -38,6 +46,13 @@ published: true
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+
+{% include sections/offer.html offer-text="Complete <strong>D</strong><span class=\"thin\">ocumentation</span> is available." button-text="ReadTheDocs" button-target="_blank" button-url="https://teampass.readthedocs.io/en/latest/" %}
+
+{% include sections/testimonials.html %}
+
+{% include sections/prices.html %}
+
 
 {% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span> <strong>E</strong><span class=\"thin\">xtension</span> is now beta." button-text="Read more" button-target="" button-url="teampassconnect.html" %}
 
