Updating with Teampass v3 details

--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@ published: true
 
 {% include sections/commercial.html %}
 
-{% include sections/offer.html offer-text="Complete <strong>D</strong><span class=\"thin\">ocumentation</span> is available." button-text="ReadTheDocs" button-target="_blank" button-url="https://teampass.readthedocs.io/en/latest/" %}
+{% include sections/offer.html offer-text="Complete <strong>D</strong><span class=\"thin\">ocumentation</span> is available." button-text="Open" button-target="_blank" button-url="https://documentation.teampass.net" %}
 
 {% include sections/testimonials.html %}
 
 {% include sections/prices.html %}
-
-
-{% include sections/offer.html offer-text="<strong>F</strong><span class=\"thin\">irefox</span> <strong>E</strong><span class=\"thin\">xtension</span> is now beta." button-text="Read more" button-target="" button-url="teampassconnect.html" %}
 
 {% include sections/team.html %}
 
