--- a/requirements.html
+++ b/requirements.html
@@ -29,9 +29,9 @@ title: What <strong>Requirements?</strong>
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
           <ul class="icon-list">
-            <li>Apache v2.0 (and after)</li>
-            <li>MySQL v5.1 (and after)</li>
-            <li>PHP v5.5.0 (and after)</li>
+            <li>Apache v2.0 (and after) OR Nginx</li>
+            <li>MariaDB 10 (and after) OR MySQL v8 (and after)</li>
+            <li>PHP v8.1 (recommanded 8.2)</li>
           </ul>
         </p>
       </div>
@@ -52,14 +52,17 @@ title: What <strong>Requirements?</strong>
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
         <p>
           <ul class="icon-list">
-            <li>mcrypt</li>
-            <li>mbstring</li>
-            <li>openssl</li>
-            <li>gd</li>
             <li>bcmath</li>
+            <li>curl</li>
+            <li>gd</li>
+            <li>gmp</li>
             <li>iconv</li>
+            <li>LDAP (if using LDAP identification)</li>
+            <li>mbstring</li>
+            <li>mcrypt</li>
+            <li>mysqli</li>
+            <li>openssl</li>
             <li>xml</li>
-            <li>LDAP if using LDAP identification</li>
           </ul>
         </p>
       </div>
